fixed alignment of nav items

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -45,7 +45,7 @@
 }
 .btn-blue-no-border {
   background-color: transparent;
-  
+  display: inline-block;
   font-size: 14px;
   padding: 10px 20px;
   font-weight: 300;
@@ -96,4 +96,3 @@
   -moz-box-shadow: 10px 10px 99px 6px rgba(240, 56, 255, 1);
   box-shadow: 10px 10px 99px 6px rgba(240, 56, 255, 1);
 }
-
